--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -37,6 +37,8 @@ a:hover {text-decoration: underline;}
 .notifications{color: #FFF; text-align: center; position: fixed; background: rgba(49,117,138,0.8); width: 100%; height: 25px; padding-top: 10px;}
 .notifications a {color: #CCC; text-decoration: none; text-shadow: 1px 1px 1px rgba(0,0,0,0.5);}
 .notifications a.hide-not{padding-left: 30px; }
+.centered {text-align: center;}
+
 
 .alert, #flash_notice, #flash_error, #flash_alert {
   padding: 5px 8px;
