More Book#show details

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -73,11 +73,11 @@
   </div>
   
   
-  <p class="centered">
+  <p>
   <% if !@book.traded? && can?(:trade, @book) && current_user.id != @book.user_id%>
     <%= trade_link(@book) if @book.user != current_user %>
   <% end %>
-  <%= button_to "Volver a la lista", books_path, :method => :get, :class => "truequear" %>
+  <%= link_to "Volver a la lista", books_path, :class => "button" %>
   </p>
 </div>
 
