--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -22,13 +22,13 @@
   <div class = "quoted-title" id="login-title">Libros que...</div>
   <div id ="libros-que">
     <ul>
-      <li>Espero</li>
-      <li>Deseo</li>
-      <li>Tengo</li>
-      <li>Truequeados</li>
+      <li><%= link_to "Espero", "#" %></li>
+      <li><%= link_to "Deseo", "#" %></li>
+      <li><%= link_to "Tengo", "#" %></li>
+      <li><%= link_to "Truequeados", "#" %></li>
     </ul>
   </div>
-  <div class = "quoted-title" id="login-title">Mis lectores</div>
+  <div class = "quoted-title" id="login-title">Otros Lectores</div>
   <%= clear %>
 </div>
 <%= clear %>
