--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -45,6 +45,8 @@ a:hover {text-decoration: underline;}
   margin: 10px 0;
 }
 
+ul, li, ol {list-style: none; margin: 0; padding: 0;}
+
 #flash_notice {
   background-color: #CFC;
   border: solid 1px #6C6;
@@ -252,6 +254,14 @@ label{
 }
 
 #sidebar { float: left; width: 225px; background-color:#E9E9E9; }
+
+#libros-que li {margin:0px 8px 12px; border-bottom: 1px solid #999; padding: 4px 5px; font-family: Georgia, Helvetica, Verdana;}
+#libros-que a  {color: #333; font-size: 1.3em; font-weight: normal;}
+
+
+
+
+
 #footer  { height: 150px; background: #F2F2F2; width: 100%; border: 1px solid #CCC; border-left: 0px; border-right: 0px; margin-bottom: 30px; }
 #footer .section {width: 310px; }
 #footer .section h3 {color: #1F4A57; font-family: Georgia; font-weight: normal; font-size: 18px;}
