--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
       <div class="left section" id="interesting-links">
         <h3>Enlaces de interés</h3>
         <p><%= link_to "Universidad EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
-        <p><%= link_to "Biblioteca EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
+        <p><%= link_to "Centro Cultural Biblioteca LEV EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
         <p><%= link_to "Red de Bibliotecas", "http://www.eafit.edu.co", :target => "_blank"%></p>
       </div>
 
