Some changes on the banners index

--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -85,7 +85,7 @@
   <%= clear %>
 
   <div id="best-books">
-    <h1>Libros destacados</h1>
+    <h1>Libros de La Esquina del Trueque</h1>
     <div class="books">
       <% for book in @best_books %>
       <%= render :partial => "books/book_small", :locals => {:book_small => book} %>
