--- a/app/views/books/_book_small.html.erb
+++ b/app/views/books/_book_small.html.erb
@@ -1,6 +1,6 @@
 <div class="book left">
   <div class="cover">
-    <%= modal_to image_tag(book_small.photo.url), book_path(book_small, :format => "modal") %>
+    <%= modal_to book_image(book_small, :thumb), book_path(book_small, :format => "modal") %>
   </div>
   <div class="info">
     <p><%= link_to book_small.title, book_small, :class => "view-more" %></p>
