--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,9 +4,9 @@
     <ul>
       <% for user in @users %>
         <li id="user-list">
-          <div class="left"><%= image_tag user.avatar.url(:mini) %></div>
+          <div class="left avatar"><%= image_tag @user.avatar.url %></div>
           <div class="rleft">
-            <p><strong><%= @user.name %></strong></p>
+            <p><h2><%= @user.name %></h2></p>
               <%= link_to "Ver perfil", user %>
           </div>
           <%= clear %>
