--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <ul>
       <% for user in @users %>
         <li id="user-list">
-          <div class="left avatar"><%= image_tag @user.avatar.url %></div>
+          <div class="left avatar"><%= image_tag user.avatar.url %></div>
             <div class="rleft">
               <p><h2><%= user.name %></h2></p>
             </div>
