--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,3 @@
-<% title "New Survey" %>
+<% title "Crear Encuesta" %>
 
 <%= render 'form' %>
-
-<p><%= link_to "Back to List", surveys_path %></p>
