--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -46,7 +46,7 @@
 <% content_for :sidebar do %>
 <div id="sidebar">
   
-  <%= render @current_survey %>
+  <%= render @current_survey if @current_survey %>
   
   
 
