Adding trade#show views

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -11,7 +11,7 @@
   </p>
   
   <p>
-    <%= f.label :isbn %> <%= modal_to "¿Qué es ISBN?", static_path('que-es-isbn'), :id => "div-id" %><br />
+    <%= f.label :isbn %> <%= modal_to "¿Qué es ISBN?", static_path('que-es-isbn', :format => :modal), :id => "div-id" %><br />
     <%= f.text_field :isbn %>
   </p>
 
