--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
 
 
 <div class="left">
-  <%= book_image(@book, :big) %>
+  <%= book_image(@book, :big, "big-cover") %>
   <%= render :partial => "books/trade_button", :locals => {:book => @book} %>    
 </div>
 
