--- a/app/views/surveys/_survey.html.erb
+++ b/app/views/surveys/_survey.html.erb
@@ -1,5 +1,5 @@
 <div id="current-poll">
-  <div class = "quoted-title" id="login-title">
+  <div class = "quoted-title login-title">
     Encuesta
   </div>
   <div id="question">
