--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,7 +1,7 @@
-<% title "Libros que me han ofrecido" %>
+<% title @title || "Libros que me han ofrecido" %>
 
 <div class="desc">
-  Estos son los libros míos que alguien quiere. Puedes aceptar o rechazar la petición de trueque.
+  <%= @description %>
 </div>
 
 <div id="all-books">
