--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -2,14 +2,16 @@
 
 <% content_for :subheader do %>
 <div id="sub-header">
-  <div id="slider">
-    <% for banner in @banners %>
-      <%= link_to_or_default image_tag(banner.photo.url), banner %>
-    <% end %>
-  </div>
+  <% if @banners.any? %>
+    <div id="slider">
+      <% for banner in @banners %>
+        <%= link_to_or_default image_tag(banner.photo.url), banner %>
+      <% end %>
+    </div>
+  <% end %>
 
   <div id="login" class="right">
-    <div class = "quoted-title" id="login-title">
+    <div class = "quoted-title login-title">
       <% if current_user %>
       <%= current_user.name || "Bienvenido" %>
       <% else %>
