--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,4 +1,4 @@
-<% title @title || "Libros que me han ofrecido" %>
+<% title @title || "Libros que me han solicitado" %>
 
 <div class="desc">
   <%= @description %>
