--- a/app/views/books/_book_small_trade.html.erb
+++ b/app/views/books/_book_small_trade.html.erb
@@ -1,6 +1,7 @@
 <div class="book-big">
   <div class="left">
-    <%= link_to image_tag(book.photo.url(:thumb)), book %>
+    <%= modal_to book_image(book, :thumb), book_path(book, :format => "modal") %>
+    <%#= link_to image_tag(book.photo.url(:thumb)), book %>
   </div>
   <div class="rleft">
     <div class="book-section">
