--- a/app/views/books/_book_trade.html.erb
+++ b/app/views/books/_book_trade.html.erb
@@ -1,6 +1,7 @@
 <div class="book-big">
   <div class="left">
-    <%= link_to image_tag(book.photo.url(:thumb)), book %>
+    <%= modal_to book_image(book, :thumb), book_path(book, :format => "modal") %>
+    <%#= link_to image_tag(book.photo.url(:thumb)), book %>
   </div>
   <div class="rleft">
     <div class="book-section">
@@ -18,7 +19,7 @@
       <%= book.health_status %>%
     </div>
     
-    <%= link_to "Aceptar Trueque", pre_accept_trade_path(trade), :class => "button" %> <span>&nbsp; &nbsp; &nbsp;</span>
+    <%= link_to "Iniciar Trueque", pre_accept_trade_path(trade), :class => "button" %> <span>&nbsp; &nbsp; &nbsp;</span>
     <%= link_to "Ignorar Trueque", ignore_trade_path(trade), :class => "button", :method => :post %>
     
   </div>
