--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -25,7 +25,7 @@
   <div id ="libros-que">
     <ul>
       <li><%= link_to "He solicitado", user_waiting_index_path(current_user) %></li>
-      <li><%= link_to "Me han solicitado (#{current_user.pending_trades.count})", trades_path %></li>
+      <li><%= link_to "Me han solicitado (#{current_user.pending_books.size})", trades_path %></li>
       <li><%= link_to "Ofrezco", user_books_path(current_user) %></li>
       <li><%= link_to "He Recibido", "#" %></li>
       <li><%= link_to "He Cambiado", "#" %></li>      
