--- a/public/stylesheets/nivo.slider.css
+++ b/public/stylesheets/nivo.slider.css
@@ -69,7 +69,7 @@
   display:block;
 	width:30px;
 	height:30px;
-	background:url(images/arrows.png) no-repeat;
+	background:url(images/arrowsw.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	
