--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -32,7 +32,26 @@
   </div>
   
   <%= clear %>
+  
+  <div id="grade">
+    <h2>Califica este trueque</h2>
+    
+    <p>
+      La calificación de los truques es vital para el funcionamiento de la comunidad. Así, las personas podrán saber si el usuario con el que están realizando el trueque es confiable o no.
+    </p>
+    
+    <%= form_for [@trade, @trade.grades.build] do |f| %>
+      <%= f.label :score, "Calificación" %>
+      <%= f.select :score, grade_options %>
+      <%= f.submit "Enviar calificación" %>
+    <% end %>
+  </div>
+  
 </div>
 <%= clear %>
 
-<%= render :partial => "comments/list_and_form", :locals => {:commentable => @trade} %>
+<div>
+  
+</div>
+
+<%= render "comments/list_and_form", :commentable => @trade %>
