--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -444,10 +444,11 @@ a.view-more {
 #comment_comment { }
 
 /* ######################################## TRADES SHOW */
-#trade-info {margin-bottom: 25px;}
+#trade-info {padding-bottom: 15px; margin-bottom: 25px; border-bottom: 1px solid #DDD;}
 #trade-info h2 {margin: 0; padding: 0;}
 
 #trade-info #given-book {width: 48%;}
 #trade-info .trade-book-info {width: 190px;}
-
 #trade-info #received-book {width: 48%;}
+
+#trade-info #grade {width: 80%; margin: 20px auto; text-align: center;}
