Sidebar menu is fully functional now

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,7 +13,7 @@
 <div id="all-books">
   <div class="books">
     <% for book in @books %>
-      <%= render :partial => "books/book_small", :locals => {:book_small => book} %>
+      <%= render "books/book_small", :book_small => book %>
     <% end %>
   </div>
 </div>
